--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </div>
 
                 <div>
-                    <a href="#" class="nav__logo">Sushanta Soren</a>
+                    <a href="#" class="nav__logo">Sushanta</a>
                 </div>
 
                 <div class="nav__menu" id="nav-menu">
