--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                             <a href="https://www.instagram.com/sushanta_srn/" class="home__social-link"><i class='bx bxl-instagram' ></i></a>
                         </div>
 
-                        <a download="" href="files/Resume/Resume.pdf" class="button">Download Resume</a>
+                        <a download="" href="files/Resume_Sushanta_@IIEST_IT2022_Intern@TSF.pdf" class="button">Download Resume</a>
                     </div>
                 </div>
             </sction>
@@ -109,6 +109,7 @@
                                 <i class='bx bx-medal about__information-icon' ></i>
                                 <div>
                                     <span class="about__information-subtitle-small">Experience</span>
+                                     <span class="about__information-subtitle">Intern at The Sparks Foundation </span>
                                     <span class="about__information-subtitle">Microsoft Engage - 2020, Mentorship</span>
                                     
                                 </div>
