--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </div>
 
                         <h1 class="home__title">Sushanta Soren</h1>
-                        <span class="home__profession">Student Developer</span>
+                        <span class="home__profession">Student Developer @ Samsung | IIEST'22</span>
 
                         <div class="home__social">
                             <a href="https://www.linkedin.com/in/sushanta-s-099790126/" class="home__social-link"><i class='bx bxl-linkedin'></i></a>
