--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                                 <i class='bx bx-medal about__information-icon' ></i>
                                 <div>
                                     <span class="about__information-subtitle-small">Experience</span>
-                                     <span class="about__information-subtitle">Intern at The Sparks Foundation </span>
+                                     <span class="about__information-subtitle">Software Engineer @ Samsung R&D Institute India,Delhi</span>
                                     <span class="about__information-subtitle">Microsoft Engage - 2020, Mentorship</span>
                                     
                                 </div>
@@ -119,9 +119,9 @@
                                 <i class='bx bx-briefcase about__information-icon' ></i>
                                 <div>
                                     <span class="about__information-subtitle-small">Projects</span>
-                                    <span class="about__information-subtitle">1. Implementation of Partitioning Algorithms for a digital logic circuit.</span>
-                                    <span class="about__information-subtitle">2. Unbeatable Tic Tac Toe Using MiniMax Algorithm.</span>
-                                    <span class="about__information-subtitle">3. Simi Quiz- Human-Computer Interaction Trivia Based On Natural Language
+                                    <span class="about__information-subtitle">1. Algorithms for Digital Microfluidic Biochips Design and Test</span>
+                                    <span class="about__information-subtitle">2. Implementation of Partitioning Algorithms for a digital logic circuit.</span>
+                                    <span class="about__information-subtitle">3. Unbeatable Tic Tac Toe Using MiniMax Algorithm.</span>
                                         Conversations.</span>
                                     
                                 </div>
