--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         </div>
 
                         <h1 class="home__title">Sushanta Soren</h1>
-                        <span class="home__profession">Student Developer @ Samsung | IIEST'22</span>
+                        <span class="home__profession">Software Engineer @ Samsung R&D Institute India,Delhi | IIEST'22</span>
 
                         <div class="home__social">
                             <a href="https://www.linkedin.com/in/sushanta-s-099790126/" class="home__social-link"><i class='bx bxl-linkedin'></i></a>
@@ -62,7 +62,7 @@
                             <a href="https://www.instagram.com/sushanta_srn/" class="home__social-link"><i class='bx bxl-instagram' ></i></a>
                         </div>
 
-                        <a download="https://drive.google.com/file/d/1WpNUAtuGo5S_6AWa7OukY30FoF0rwL4k/view?usp=sharing" class="button">Download Resume</a>
+                        <a download="https://drive.google.com/file/d/1vo5gr3r7X6UCuxd_qCTpCwiGPPOYkTCS/view?usp=sharing" class="button">Download Resume</a>
                     </div>
                 </div>
             </sction>
@@ -380,8 +380,8 @@
     
                         <div class="contact__info">
                             <h3 class="contact__subtitle">Location</h3>
-                            <span class="contact__text">IIEST Shibpur Near B.Garden </span>
-                            <span class="contact__text">Kolkata, West Bengal, India - 711103</span>
+                            <span class="contact__text">T562/2A3,BALJEET NAGAR </span>
+                            <span class="contact__text">Near Axis Bank ATM,PATEL NAGAR,DELHI,110008	</span>
                         </div>
                     </div>
                 </div>
@@ -400,7 +400,7 @@
                     <a href="https://www.linkedin.com/in/sushanta-s-099790126/" class="footer__link"><i class='bx bxl-linkedin' ></i></a>
                 </div>
 
-                <p class="footer__copy">All right reserved by Sushanta Soren - 2021</p>
+                <p class="footer__copy">All right reserved by Sushanta Soren - 2022</p>
             </div>
         </footer>
         <!--===== MAIN JS =====-->
